--- a/src/main/resources/vm/java/domain.java.vm
+++ b/src/main/resources/vm/java/domain.java.vm
@@ -1,35 +1,45 @@
 package ${packageName}.domain;
 
+import com.baomidou.mybatisplus.annotation.TableField;
+import com.baomidou.mybatisplus.annotation.TableName;
+import com.fasterxml.jackson.annotation.JsonFormat;
+import io.swagger.annotations.ApiModel;
+import io.swagger.annotations.ApiModelProperty;
+import lombok.Getter;
+import lombok.Setter;
 #foreach ($import in $importList)
 import ${import};
 #end
-import org.apache.commons.lang3.builder.ToStringBuilder;
-import org.apache.commons.lang3.builder.ToStringStyle;
+
 import com.ruoyi.framework.aspectj.lang.annotation.Excel;
 #if($table.crud || $table.sub)
-import com.ruoyi.framework.web.domain.BaseEntity;
+import com.ruoyi.framework.web.domain.BaseModel;
 #elseif($table.tree)
 import com.ruoyi.framework.web.domain.TreeEntity;
 #end
 
 /**
  * ${functionName}对象 ${tableName}
- * 
+ *
  * @author ${author}
  * @date ${datetime}
  */
+@ApiModel("${functionName}")
+@TableName("${tableName}")
+@Getter
+@Setter
 #if($table.crud || $table.sub)
-#set($Entity="BaseEntity")
+#set($Entity="BaseModel")
 #elseif($table.tree)
 #set($Entity="TreeEntity")
 #end
-public class ${ClassName} extends ${Entity}
+public class ${ClassName} extends ${Entity}<${ClassName}>
 {
-    private static final long serialVersionUID = 1L;
 
 #foreach ($column in $columns)
 #if(!$table.isSuperColumn($column.javaField))
-    /** $column.columnComment */
+##    /** $column.columnComment */
+
 #if($column.list)
 #set($parentheseIndex=$column.columnComment.indexOf("（"))
 #if($parentheseIndex != -1)
@@ -37,6 +47,7 @@ public class ${ClassName} extends ${Entity}
 #else
 #set($comment=$column.columnComment)
 #end
+    @ApiModelProperty("$column.columnComment")
 #if($parentheseIndex != -1)
     @Excel(name = "${comment}", readConverterExp = "$column.readConverterExp()")
 #elseif($column.javaType == 'Date')
@@ -46,33 +57,39 @@ public class ${ClassName} extends ${Entity}
     @Excel(name = "${comment}")
 #end
 #end
+## mybatis plus 注解选择
+#if($column.isPk=="1")
+    @TableId(type = IdType.AUTO)
+#end
+    @TableField(value = "${column.columnName}")
     private $column.javaType $column.javaField;
-
 #end
 #end
 #if($table.sub)
-    /** $table.subTable.functionName信息 */
+##    /** $table.subTable.functionName信息 */
+    @ApiModelProperty("$table.subTable.functionName信息")
     private List<${subClassName}> ${subclassName}List;
 
 #end
-#foreach ($column in $columns)
-#if(!$table.isSuperColumn($column.javaField))
-#if($column.javaField.length() > 2 && $column.javaField.substring(1,2).matches("[A-Z]"))
-#set($AttrName=$column.javaField)
-#else
-#set($AttrName=$column.javaField.substring(0,1).toUpperCase() + ${column.javaField.substring(1)})
-#end
-    public void set${AttrName}($column.javaType $column.javaField) 
-    {
-        this.$column.javaField = $column.javaField;
-    }
 
-    public $column.javaType get${AttrName}() 
-    {
-        return $column.javaField;
-    }
-#end
-#end
+## #foreach ($column in $columns)
+## #if(!$table.isSuperColumn($column.javaField))
+## #if($column.javaField.length() > 2 && $column.javaField.substring(1,2).matches("[A-Z]"))
+## #set($AttrName=$column.javaField)
+## #else
+## #set($AttrName=$column.javaField.substring(0,1).toUpperCase() + ${column.javaField.substring(1)})
+## #end
+##     public void set${AttrName}($column.javaType $column.javaField)
+##     {
+##         this.$column.javaField = $column.javaField;
+##     }
+##
+##     public $column.javaType get${AttrName}()
+##     {
+##         return $column.javaField;
+##     }
+## #end
+## #end
 
 #if($table.sub)
     public List<${subClassName}> get${subClassName}List()
@@ -86,20 +103,4 @@ public class ${ClassName} extends ${Entity}
     }
 
 #end
-    @Override
-    public String toString() {
-        return new ToStringBuilder(this,ToStringStyle.MULTI_LINE_STYLE)
-#foreach ($column in $columns)
-#if($column.javaField.length() > 2 && $column.javaField.substring(1,2).matches("[A-Z]"))
-#set($AttrName=$column.javaField)
-#else
-#set($AttrName=$column.javaField.substring(0,1).toUpperCase() + ${column.javaField.substring(1)})
-#end
-            .append("${column.javaField}", get${AttrName}())
-#end
-#if($table.sub)
-            .append("${subclassName}List", get${subClassName}List())
-#end
-            .toString();
-    }
 }
